Give up on segmented-node-store for now